# gpx

./: README.md  pyproject.toml  render.yaml
app/: index.html
gpx/: auth.py  config.py  dependencies.py  index.html  main.py  urls.py
gpx/routers/: auth.py  projects.py
gpx/routers/projects/: __init__.py  add.py  get.py  github_emoji.py  gql.py  item_models.py  models.py  project_models.py
gpx/templates/: index.html
gpx/templates/components/: add_item_section.html  hyperscript.html  login_section.html  project_editor.html  project_items_section.html  projects_list.html  projects_section.html
gpxs/: main.py  secret.py
server/: main.py
