[tool.poetry]
name = "gpx"
version = "0.1.0"
description = ""
authors = ["Louis Maddox <louismmx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"serve" = "gpx.main:serve"
